--- a/main.html
+++ b/main.html
@@ -10,6 +10,62 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form action="">
+        <header>
+            <h3>Signup Form Car</h3>
+        </header>
+        <div><label for="Name">Name*</label>
+            <input type="text" id="name" placeholder="enter your name" required></div>
+      <div><label for="Email">Email*</label>
+        <input type="email" id="email" placeholder="enter your email" required>
+    </div> 
+    <div>
+		 <label for="gender">Gender*</label><br>
+          <input type="radio" id="male" name="gender" value="male" required>
+        <label for="male">Male</label><br>
+
+          <input type="radio" id="female" name="gender" value="female" required>
+        <label for="female">Female</label><br>
+    </div> 
+    <div><label for="car brands">Car Brands*</label>
+        <select>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Mercedez">Mercedez</option>
+        </select>
+    </div> 
+    <div><label for="Age">Age*</label>
+        <input type="number" id="age" placeholder="enter your age" required>
+    </div> 
+    <div><label for="dob">DOB*</label>
+        <input type="date" id="dob" required>
+    </div> 
+    <div><label for="phone number">Phone Number</label>
+        <input type="number" id="phone number" placeholder="xxx-xxx-xxxx" required>
+    </div> 
+    <div><label for="password">Password*</label>
+        <input type="password" id="password" placeholder="enter password" required>
+    </div>
+    <div><label for="checkbox">Checkbox*</label>
+        <input type="checkbox" id="checkbox" required>
+    </div>
+    <button type="sub
+    ">submit button</button>
+    
+         
+
+    </form>
+</body>
+</html>
 
 </body>
 
